--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Aug 27, 2018 at 23:57
+# Sep 2, 2018 at 22:26
 
 [Rule]
 # Custom
@@ -457,7 +457,6 @@ DOMAIN-SUFFIX,adash-c.ut.taobao.com,REJECT
 DOMAIN-SUFFIX,adashxgc.ut.taobao.com,REJECT
 DOMAIN-SUFFIX,amdc.m.taobao.com,REJECT
 DOMAIN-SUFFIX,apoll.m.taobao.com,REJECT
-DOMAIN-SUFFIX,nbsdk-baichuan.alicdn.com,REJECT
 
 // Apple
 DOMAIN-SUFFIX,adserver.unityads.unity3d.com,REJECT
@@ -984,7 +983,6 @@ DOMAIN-SUFFIX,goto.sogou.com,REJECT
 DOMAIN-SUFFIX,ht.www.sogou.com,REJECT
 DOMAIN-SUFFIX,image.p4p.sogou.com,REJECT
 DOMAIN-SUFFIX,info.pinyin.sogou.com,REJECT
-DOMAIN-SUFFIX,input.shouji.sogou.com,REJECT
 DOMAIN-SUFFIX,iwan.sogou.com,REJECT
 DOMAIN-SUFFIX,lu.sogou.com,REJECT
 DOMAIN-SUFFIX,mini.cpc.sogou.com,REJECT
@@ -4268,7 +4266,6 @@ DOMAIN-SUFFIX,shop.admin.yinyuetai.com,REJECT
 DOMAIN-SUFFIX,shop.yinyuetai.com,REJECT
 DOMAIN-SUFFIX,shop265.com,REJECT
 DOMAIN-SUFFIX,shoppingpartners2.futurenet.com,REJECT
-DOMAIN-SUFFIX,shouji.sougou.com,REJECT
 DOMAIN-SUFFIX,show.kc.taotaosou.com,REJECT
 DOMAIN-SUFFIX,show.qx15.com,REJECT
 DOMAIN-SUFFIX,show.xiazai16.com,REJECT
@@ -4690,6 +4687,7 @@ DOMAIN-SUFFIX,vsnoon.com,REJECT
 DOMAIN-SUFFIX,vt.ipinyou.com,REJECT
 DOMAIN-SUFFIX,vtale.org,REJECT
 DOMAIN-SUFFIX,vungle.cn,REJECT
+DOMAIN-SUFFIX,vungle.com,REJECT
 DOMAIN-SUFFIX,vupload.duowan.com,REJECT
 DOMAIN-SUFFIX,vv84.bj.bcebos.com,REJECT
 DOMAIN-SUFFIX,vvv.ieduw.com,REJECT
@@ -5232,6 +5230,7 @@ IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 IP-CIDR6,2001:67c:4e8::/48,REJECT,no-resolve
 IP-CIDR6,2001:b28:f23d::/48,REJECT,no-resolve
 IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
+
 # PROXY
 
 // Client
@@ -5491,6 +5490,7 @@ DOMAIN-SUFFIX,fzlm.net,PROXY
 DOMAIN-SUFFIX,g.co,PROXY
 DOMAIN-SUFFIX,gabia.net,PROXY
 DOMAIN-SUFFIX,garena.com,PROXY
+DOMAIN-SUFFIX,gameloft.com,PROXY
 DOMAIN-SUFFIX,geni.us,PROXY
 DOMAIN-SUFFIX,get.how,PROXY
 DOMAIN-SUFFIX,getcloudapp.com,PROXY
@@ -5740,6 +5740,7 @@ DOMAIN-SUFFIX,tdesktop.com,PROXY
 DOMAIN-SUFFIX,techcrunch.com,PROXY
 DOMAIN-SUFFIX,technorati.com,PROXY
 DOMAIN-SUFFIX,techsmith.com,PROXY
+DOMAIN-SUFFIX,teddysun.com,PROXY
 DOMAIN-SUFFIX,telegra.ph,PROXY
 DOMAIN-SUFFIX,textnow.me,PROXY
 DOMAIN-SUFFIX,thebobs.com,PROXY
@@ -5951,10 +5952,7 @@ DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,pubnub.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scdn.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,telegram.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,telegram.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tensorflow.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,thefacebook.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,toggleable.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,torproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,twimg.com,PROXY,force-remote-dns
@@ -6206,7 +6204,6 @@ DOMAIN-SUFFIX,hollisterco.com,Domestic
 DOMAIN-SUFFIX,hongxiu.com,Domestic
 DOMAIN-SUFFIX,hxcdn.net,Domestic
 DOMAIN-SUFFIX,iciba.com,Domestic
-DOMAIN-SUFFIX,icloud.com,Domestic
 DOMAIN-SUFFIX,ifeng.com,Domestic
 DOMAIN-SUFFIX,ifengimg.com,Domestic
 DOMAIN-SUFFIX,images.unsplash.com,Domestic
@@ -6374,6 +6371,7 @@ IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
+
 
 
 
