--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Sep 2, 2018 at 22:26
+# Sep 10, 2018 at 02:01
 
 [Rule]
 # Custom
@@ -6124,12 +6124,14 @@ DOMAIN-SUFFIX,360.com,Domestic
 DOMAIN-SUFFIX,360buy.com,Domestic
 DOMAIN-SUFFIX,360buyimg.com,Domestic
 DOMAIN-SUFFIX,36kr.com,Domestic
+DOMAIN-SUFFIX,51ym.me,Domestic
 DOMAIN-SUFFIX,58.com,Domestic
 DOMAIN-SUFFIX,8686c.com,Domestic
 DOMAIN-SUFFIX,abercrombie.com,Domestic
 DOMAIN-SUFFIX,acfun.tv,Domestic
 DOMAIN-SUFFIX,acgvideo.com,Domestic
 DOMAIN-SUFFIX,adobesc.com,Domestic
+DOMAIN-SUFFIX,airtable.com,Domestic
 DOMAIN-SUFFIX,air-matters.com,Domestic
 DOMAIN-SUFFIX,air-matters.io,Domestic
 DOMAIN-SUFFIX,aixifan.com,Domestic
@@ -6208,6 +6210,7 @@ DOMAIN-SUFFIX,ifeng.com,Domestic
 DOMAIN-SUFFIX,ifengimg.com,Domestic
 DOMAIN-SUFFIX,images.unsplash.com,Domestic
 DOMAIN-SUFFIX,images-amazon.com,Domestic
+DOMAIN-SUFFIX,img4me.com,Domestic
 DOMAIN-SUFFIX,ipify.org,Domestic
 DOMAIN-SUFFIX,ipip.net,Domestic
 DOMAIN-SUFFIX,iqiyi.com,Domestic
@@ -6251,7 +6254,6 @@ DOMAIN-SUFFIX,netease.com,Domestic
 DOMAIN-SUFFIX,nfoservers.com,Domestic
 DOMAIN-SUFFIX,nssurge.com,Domestic
 DOMAIN-SUFFIX,nuomi.com,Domestic
-DOMAIN-SUFFIX,onevps.com,Domestic
 DOMAIN-SUFFIX,ourdvs.com,Domestic
 DOMAIN-SUFFIX,overcast.fm,Domestic
 DOMAIN-SUFFIX,paypal.com,Domestic
