--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Sep 10, 2018 at 02:01
+# Sep 11, 2018 at 02:03
 
 [Rule]
 # Custom
@@ -5452,6 +5452,7 @@ DOMAIN-SUFFIX,disquscdn.com,PROXY
 DOMAIN-SUFFIX,dmm.co.jp,PROXY
 DOMAIN-SUFFIX,dnsimple.com,PROXY
 DOMAIN-SUFFIX,docker.com,PROXY
+DOMAIN-SUFFIX,doub.io, PROXY
 DOMAIN-SUFFIX,dribbble.com,PROXY
 DOMAIN-SUFFIX,droplr.com,PROXY
 DOMAIN-SUFFIX,duckduckgo.com,PROXY
@@ -6643,7 +6644,8 @@ FINAL,Others
 // Weibo
 ^https?://api.weibo.cn/2/statuses/longtext_show_batch - reject
 ^https?://simg.s.weibo.com/.+_ios\d{2}.gif - reject
-^https?://u1.img.mobile.sina.cn/public/files/image/\d{3}x\d{2,4} - reject
+^https?://storage.wax.weibo.com/\w+.(png|jpg|mp4) - reject
+^https?://u1.img.mobile.sina.cn/public/files/image/\w{3}x\w{2,4}.+(png|jpg|mp4) - reject
 
 // Xianyu
 ^https?://gw.alicdn.com/mt/ - reject
