--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Sep 12, 2018 at 16:28
+# Sep 18, 2018 at 00:18
 
 [Rule]
 # Custom
@@ -5357,6 +5357,7 @@ DOMAIN-SUFFIX,angularjs.org,PROXY
 DOMAIN-SUFFIX,anthonycalzadilla.com,PROXY
 DOMAIN-SUFFIX,aol.com,PROXY
 DOMAIN-SUFFIX,aolcdn.com,PROXY
+DOMAIN-SUFFIX,api.mixpanel.com,PROXY
 DOMAIN-SUFFIX,api.tiktokv.com,PROXY
 DOMAIN-SUFFIX,api.urbandictionary.com,PROXY
 DOMAIN-SUFFIX,apigee.com,PROXY
@@ -6259,7 +6260,6 @@ DOMAIN-SUFFIX,overcast.fm,Domestic
 DOMAIN-SUFFIX,paypal.com,Domestic
 DOMAIN-SUFFIX,paypalobjects.com,Domestic
 DOMAIN-SUFFIX,pgyer.com,Domestic
-DOMAIN-SUFFIX,pixiv.net,Domestic
 DOMAIN-SUFFIX,pstatp.com,Domestic
 DOMAIN-SUFFIX,qbox.me,Domestic
 DOMAIN-SUFFIX,qcloud.com,Domestic
@@ -6755,6 +6755,7 @@ FINAL,Others
 ^https?://aweme.snssdk.com/service/1/app_logout/ - reject 
 ^https?://aweme.snssdk.com/service/2/app_log - reject 
 ^https?://frontier.snssdk.com/ - reject 
+^https?://lf.snssdk.com/api/ad/ - reject
 
 // Xiachufang
 ^https?://api.xiachufang.com/v2/ad/ - reject
@@ -6934,6 +6935,7 @@ FINAL,Others
 ^https?://.+/client?functionId=lauch/lauchConfig&appName=paidaojia - reject
 
 // Keep
+^https?://api.gotokeep.com/ads - reject
 ^https?://static1.keepcdn.com/.+750x1080 - reject
 
 // iSafePlay
