--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# Sep 18, 2018 at 00:18
+# 2018年9月19日 20:56
 
 [Rule]
 # Custom
@@ -5275,6 +5275,9 @@ DOMAIN-SUFFIX,chocotv.com.tw,PROXY
 DOMAIN-KEYWORD,epicgames,PROXY,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
 
+// Hulu
+DOMAIN-SUFFIX,hulu.com,PROXY
+
 // Line
 DOMAIN-SUFFIX,lin.ee,PROXY
 DOMAIN-SUFFIX,line.me,PROXY
@@ -6953,9 +6956,6 @@ FINAL,Others
 
 // Jiatu
 ^https?://images.kartor.cn/.+.html - reject
-
-// Ecitic bank
-^https?://wap.bank.ecitic.com/NMBFOServer/cbframework.do\?act=\w+ - reject
 
 // Dongka kongjian
 ^https?://m.creditcard.ecitic.com/citiccard/mbk/appspace-client/cr/sys/popAdv - reject
