--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年9月25日 13:03
+# 2018年9月25日 13:39
 
 [Rule]
 # Custom
@@ -6287,6 +6287,7 @@ DOMAIN-SUFFIX,sinaimg.cn,Domestic
 DOMAIN-SUFFIX,sinaimg.com,Domestic
 DOMAIN-SUFFIX,sm.ms,Domestic
 DOMAIN-SUFFIX,smzdm.com,Domestic
+DOMAIN-SUFFIX,snssdk.com,Domestic
 DOMAIN-SUFFIX,snwx.com,Domestic
 DOMAIN-SUFFIX,so.com,Domestic
 DOMAIN-SUFFIX,sogou.com,Domestic
@@ -6747,15 +6748,15 @@ FINAL,Others
 ^https?://api.laifeng.com/v1/start/ads - reject
 
 // Douyin
-^https?://.+.pstatp.com/img/ad - reject
-^https?://aweme.snssdk.com/api/ad/ - reject 
+^https?://.+\.pstatp\.com\/img\/ad - reject
+^https?://.+\.snssdk\.com\/api\/ad\/ - reject 
 ^https?://aweme.snssdk.com/aweme/v1/aweme/stats/ - reject 
 ^https?://aweme.snssdk.com/aweme/v1/device/update/ - reject 
 ^https?://aweme.snssdk.com/aweme/v1/screen/ad/ - reject 
 ^https?://aweme.snssdk.com/service/1/app_logout/ - reject 
 ^https?://aweme.snssdk.com/service/2/app_log - reject 
-^https?://frontier.snssdk.com/ - reject 
-^https?://lf.snssdk.com/api/ad/ - reject
+^https?://frontier.snssdk.com/ - reject
+^https?://sf\w-ttcdn-tos\.pstatp\.com\/obj\/web\.business\.image - reject
 
 // Xiachufang
 ^https?://api.xiachufang.com/v2/ad/ - reject
