--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年9月26日 23:54
+# 2018年9月27日 13:13
 
 [Rule]
 # Custom
@@ -5581,6 +5581,7 @@ DOMAIN-SUFFIX,logmein.com,PROXY
 DOMAIN-SUFFIX,macid.co,PROXY
 DOMAIN-SUFFIX,macromedia.com,PROXY
 DOMAIN-SUFFIX,macrumors.com,PROXY
+DOMAIN-SUFFIX,manhuaren.com,PROXY
 DOMAIN-SUFFIX,marketwatch.com,PROXY
 DOMAIN-SUFFIX,mashable.com,PROXY
 DOMAIN-SUFFIX,mathjax.org,PROXY
@@ -5663,6 +5664,8 @@ DOMAIN-SUFFIX,puffinbrowser.com,PROXY
 DOMAIN-SUFFIX,pushbullet.com,PROXY
 DOMAIN-SUFFIX,pushwoosh.com,PROXY
 DOMAIN-SUFFIX,pximg.net,PROXY
+DOMAIN-SUFFIX,quora.com,PROXY
+DOMAIN-SUFFIX,quoracdn.net,PROXY
 DOMAIN-SUFFIX,readingtimes.com.tw,PROXY
 DOMAIN-SUFFIX,readmoo.com,PROXY
 DOMAIN-SUFFIX,recaptcha.net,PROXY
