--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年9月27日 13:13
+# 2018年9月27日 22:28
 
 [Rule]
 # Custom
@@ -2318,7 +2318,6 @@ DOMAIN-SUFFIX,cdn.jiuzhilan.com,REJECT
 DOMAIN-SUFFIX,cdn.popcash.net,REJECT
 DOMAIN-SUFFIX,cdn.popmyads.com,REJECT
 DOMAIN-SUFFIX,cdn.puata.info,REJECT
-DOMAIN-SUFFIX,cdn.segment.com,REJECT
 DOMAIN-SUFFIX,cdn0.mobmore.com,REJECT
 DOMAIN-SUFFIX,cdnads.com,REJECT
 DOMAIN-SUFFIX,cdnimg.liehu.ijinshan.com,REJECT
@@ -5239,7 +5238,7 @@ PROCESS-NAME,Dropbox,PROXY
 PROCESS-NAME,LINE,PROXY
 PROCESS-NAME,node-webkit,PROXY
 PROCESS-NAME,Resilio Sync,PROXY
-PROCESS-NAME,Spotify,Netflix & TVB & Spotify & YouTube
+PROCESS-NAME,Spotify,Media
 PROCESS-NAME,Tweetbot,PROXY
 PROCESS-NAME,Twitter,PROXY
 PROCESS-NAME,Twitterrific,PROXY
@@ -5247,7 +5246,7 @@ PROCESS-NAME,viu,PROXY
 
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
-USER-AGENT,Argo*,Netflix & TVB & Spotify & YouTube
+USER-AGENT,Argo*,Media
 USER-AGENT,AwemeI18n*,PROXY
 USER-AGENT,Coinbase*,PROXY
 USER-AGENT,Instagram*,PROXY
@@ -5285,10 +5284,10 @@ DOMAIN-SUFFIX,line-scdn.net,PROXY
 DOMAIN-SUFFIX,nhncorp.jp,PROXY
 
 // MytvSUPER
-DOMAIN-KEYWORD,nowtv100,Netflix & TVB & Spotify & YouTube
-DOMAIN-KEYWORD,rthklive,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,mytvsuper.com,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,tvb.com,Netflix & TVB & Spotify & YouTube
+DOMAIN-KEYWORD,nowtv100,Media
+DOMAIN-KEYWORD,rthklive,Media
+DOMAIN-SUFFIX,mytvsuper.com,Media
+DOMAIN-SUFFIX,tvb.com,Media
 
 // Microsoft
 USER-AGENT,OneDrive*,PROXY
@@ -5303,12 +5302,12 @@ DOMAIN-SUFFIX,office.net,PROXY
 DOMAIN-SUFFIX,outlook.com,PROXY
 
 // Netflix
-DOMAIN-SUFFIX,netflix.com,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,netflix.net,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,nflxext.com,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,nflximg.com,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,nflximg.net,Netflix & TVB & Spotify & YouTube
-DOMAIN-SUFFIX,nflxvideo.net,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,netflix.com,Media
+DOMAIN-SUFFIX,netflix.net,Media
+DOMAIN-SUFFIX,nflxext.com,Media
+DOMAIN-SUFFIX,nflximg.com,Media
+DOMAIN-SUFFIX,nflximg.net,Media
+DOMAIN-SUFFIX,nflxvideo.net,Media
 
 // Spark
 DOMAIN-SUFFIX,api.amplitude.com,PROXY
@@ -5317,7 +5316,7 @@ DOMAIN-SUFFIX,gate.hockeyapp.net,PROXY
 DOMAIN-SUFFIX,smartmailcloud.com,PROXY
 
 // Steam
-DOMAIN-SUFFIX,fanatical.com, PROXY
+DOMAIN-SUFFIX,fanatical.com,PROXY
 DOMAIN-SUFFIX,humblebundle.com,PROXY
 DOMAIN-SUFFIX,steamcommunity.com,PROXY
 DOMAIN-SUFFIX,steampowered.com,PROXY
@@ -5451,7 +5450,7 @@ DOMAIN-SUFFIX,disquscdn.com,PROXY
 DOMAIN-SUFFIX,dmm.co.jp,PROXY
 DOMAIN-SUFFIX,dnsimple.com,PROXY
 DOMAIN-SUFFIX,docker.com,PROXY
-DOMAIN-SUFFIX,doub.io, PROXY
+DOMAIN-SUFFIX,doub.io,PROXY
 DOMAIN-SUFFIX,dribbble.com,PROXY
 DOMAIN-SUFFIX,droplr.com,PROXY
 DOMAIN-SUFFIX,duckduckgo.com,PROXY
@@ -5709,7 +5708,7 @@ DOMAIN-SUFFIX,sourceforge.net,PROXY
 DOMAIN-SUFFIX,sowers.org.hk,PROXY
 DOMAIN-SUFFIX,speedsmart.net,PROXY
 DOMAIN-SUFFIX,spike.com,PROXY
-DOMAIN-SUFFIX,spoti.fi,Netflix & TVB & Spotify & YouTube
+DOMAIN-SUFFIX,spoti.fi,Media
 DOMAIN-SUFFIX,squarespace.com,PROXY
 DOMAIN-SUFFIX,ssa.gov,PROXY
 DOMAIN-SUFFIX,sstatic.net,PROXY
@@ -5911,7 +5910,7 @@ DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
 DOMAIN-KEYWORD,github,PROXY,force-remote-dns
-DOMAIN-KEYWORD,spotify,Netflix & TVB & Spotify & YouTube,force-remote-dns
+DOMAIN-KEYWORD,spotify,Media,force-remote-dns
 DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
@@ -6043,8 +6042,8 @@ IP-CIDR,208.43.0.0/16,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 IP-CIDR,149.154.164.0/22,PROXY,no-resolve
-IP-CIDR,149.154.168.0/22, PROXY,no-resolve
-IP-CIDR,149.154.172.0/22, PROXY,no-resolve
+IP-CIDR,149.154.168.0/22,PROXY,no-resolve
+IP-CIDR,149.154.172.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
@@ -7007,6 +7006,9 @@ FINAL,Others
 
 // 58
 ^https?:\/\/app\.58\.com\/api\/log\/ - reject
+
+// shitouyuedu
+^https?:\/\/stoneread\.mini-install\.com\/api\/apiClient/index\?data= - reject
 
 // Other
 ^https?:\/\/.+allOne\.php\?ad_name=main_splash_ios - reject
