--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年9月27日 22:28
+# 2018年9月28日 19:58
 
 [Rule]
 # Custom
@@ -20,7 +20,7 @@ USER-AGENT,AssistantServices*,Apple //Siri
 USER-AGENT,MobileAsset*,Apple
 USER-AGENT,Siri*,Apple
 
-USER-AGENT,cloudd*,Apple //iCloud
+USER-AGENT,cloudd*,Apple // iCloud
 USER-AGENT,com.apple.appstored*,Apple // iOS App Store
 USER-AGENT,com.apple.geod*,Apple
 USER-AGENT,com.apple.Maps,Apple
@@ -33,17 +33,19 @@ USER-AGENT,geod*,Apple
 USER-AGENT,locationd*,Apple
 USER-AGENT,Maps*,Apple
 
+DOMAIN,guzzoni.apple.com,Apple
 DOMAIN-SUFFIX,aaplimg.com,Apple
 DOMAIN-SUFFIX,apple.co,Apple
 DOMAIN-SUFFIX,apple.com,Apple
+DOMAIN-SUFFIX,apple-cloudkit.com,Apple
+DOMAIN-SUFFIX,cdn-apple.com,Apple
 DOMAIN-SUFFIX,icloud.com,Apple
 DOMAIN-SUFFIX,icloud-content.com,Apple
+DOMAIN-SUFFIX,itunes.apple.com,Apple
 DOMAIN-SUFFIX,itunes.com,Apple
+DOMAIN-SUFFIX,lookup-api.apple.com,Apple
 DOMAIN-SUFFIX,me.com,Apple
-DOMAIN-SUFFIX,mzstatic.com,Apple // App Store & iTunes Images
-DOMAIN-SUFFIX,push-apple.com.akadns.net,Apple
-
-IP-CIDR,17.0.0.0/8,Apple,no-resolve
+DOMAIN-SUFFIX,mzstatic.com,Apple
 # Ads in Video apps
 
 // iqiyi
@@ -5638,6 +5640,7 @@ DOMAIN-SUFFIX,parse.com,PROXY
 DOMAIN-SUFFIX,pdfexpert.com,PROXY
 DOMAIN-SUFFIX,periscope.tv,PROXY
 DOMAIN-SUFFIX,piaotian.net,PROXY
+DOMAIN-SUFFIX,picacomic.com,PROXY
 DOMAIN-SUFFIX,picasaweb.com,PROXY
 DOMAIN-SUFFIX,pinboard.in,PROXY
 DOMAIN-SUFFIX,ping.pe,PROXY
@@ -6391,7 +6394,6 @@ FINAL,Others
 
 
 
-[Host]
 
 
 
@@ -6453,7 +6455,7 @@ FINAL,Others
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/ad_complaint - reject
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/ad_video - reject
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/advertisement_report - reject
-^https?:\/\/mp\.weixin\qq\.com\/mp\/report - reject
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/report - reject
 ^https?:\/\/mtteve\.beacon\.qq\.com\/analytics - reject
 ^https?:\/\/r\.inews\.qq\.com\/adsBlacklist - reject
 ^https?:\/\/r\.inews\.qq\.com\/getBannerAds - reject
@@ -7007,9 +7009,6 @@ FINAL,Others
 // 58
 ^https?:\/\/app\.58\.com\/api\/log\/ - reject
 
-// shitouyuedu
-^https?:\/\/stoneread\.mini-install\.com\/api\/apiClient/index\?data= - reject
-
 // Other
 ^https?:\/\/.+allOne\.php\?ad_name=main_splash_ios - reject
 ^https?:\/\/.+nga\.cn.+\bhome.+\b=ad - reject
@@ -7060,7 +7059,6 @@ FINAL,Others
 
 
 
-[SSID Setting]
 # SSID
 
 
