--- a/NewRule.conf
+++ b/NewRule.conf
@@ -1,4 +1,11 @@
 [Rule]
+PROCESS-NAME,storedownloadd,Domestic // Mac App Store
+USER-AGENT,com.apple.appstored*,Domestic // iOS App Store
+DOMAIN,iosapps.itunes.apple.com,Domestic
+DOMAIN,xp.apple.com,Domestic // iOS & macOS System Upgrade
+DOMAIN-SUFFIX,store.apple.com,Domestic
+
+# Rulesets
 RULE-SET,SYSTEM,DIRECT
 
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/domestic.list,Domestic
