--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年9月28日 19:58
+# 2018年10月1日 13:08
 
 [Rule]
 # Custom
@@ -5913,6 +5913,7 @@ DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
 DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
 DOMAIN-KEYWORD,github,PROXY,force-remote-dns
+DOMAIN-KEYWORD,porn,PROXY,force-remote-dns
 DOMAIN-KEYWORD,spotify,Media,force-remote-dns
 DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
