--- a/NewRule.conf
+++ b/NewRule.conf
@@ -12,9 +12,7 @@ RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/domestic.
 
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/apple.list,Apple
 
-# RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/adblock.list,REJECT
-
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/reject.list,REJECT-TINYGIF
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/reject.list,REJECT
 
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/media.list,Media
 
