--- a/Other.conf
+++ b/Other.conf
@@ -36,26 +36,12 @@
 ^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
 ^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
 
-
-
-// Anti_ISP_JavaScript_Injection
-^https?:\/\/c\.minisplat\.cn - reject
-^https?:\/\/c1\.minisplat\.cn - reject
-^https?:\/\/cache\.changjingyi\.cn - reject
-^https?:\/\/cache\.gclick\.cn - reject
-
-// Anti_ISP_Safari_Baidu_CPM_Hijack
-^https?:\/\/m\.coolaiy\.com\/b\.php - reject
-^https?:\/\/www\.babyye\.com\/b\.php - reject
-^https?:\/\/www\.gwv7\.com\/b\.php - reject
-^https?:\/\/www\.likeji\.net\/b\.php - reject
-
 // Tencent
 ^https?:\/\/imgcache\.qq\.com\/qqlive\/ - reject
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/ad_complaint - reject
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/ad_video - reject
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/advertisement_report - reject
-^https?:\/\/mp\.weixin\qq\.com\/mp\/report - reject
+^https?:\/\/mp\.weixin\.qq\.com\/mp\/report - reject
 ^https?:\/\/mtteve\.beacon\.qq\.com\/analytics - reject
 ^https?:\/\/r\.inews\.qq\.com\/adsBlacklist - reject
 ^https?:\/\/r\.inews\.qq\.com\/getBannerAds - reject
@@ -609,14 +595,14 @@
 // 58
 ^https?:\/\/app\.58\.com\/api\/log\/ - reject
 
-// shitouyuedu
-^https?:\/\/stoneread\.mini-install\.com\/api\/apiClient/index\?data= - reject
+// Duokan
+^https?:\/\/www\.duokan\.com/pictures? - REJECT
+^https?:\/\/www\.duokan\.com/promotion_day - REJECT
 
 // Other
 ^https?:\/\/.+allOne\.php\?ad_name=main_splash_ios - reject
 ^https?:\/\/.+nga\.cn.+\bhome.+\b=ad - reject
 ^https?:\/\/.+resource=article\/recommend\&accessToken= - reject
-^https?:\/\/[^(apple|10010)]+\.(com|cn)\/(a|A)d(s|v)?(\/|\.js) - reject
 ^https?:\/\/113\.200\.76\.*:16420\/sxtd\.bike2\.01\/getkey\.do - reject
 ^https?:\/\/cdn\.api\.fotoable\.com\/Advertise\/ - reject
 ^https?:\/\/counter\.ksosoft\.com\/ad\.php - reject
@@ -645,8 +631,6 @@
 ^https?:\/\/wmedia-track\.uc\.cn - reject
 ^https?:\/\/www\.ft\.com\/__origami\/service\/image\/v2\/images\/raw\/https%3A%2F%2Fcreatives\.ftimg\.net%2Fads* - reject
 ^https?:\/\/www\.lianbijr\.com\/adPage\/ - reject
-
-
 
 [Header Rewrite]
 ^*.bdimg.com header-del Referer
