--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年10月8日 23:17
+# 2018年10月12日 18:59
 
 [Rule]
 # Custom
@@ -5230,7 +5230,6 @@ IP-CIDR,78.140.131.214/32,REJECT,no-resolve
 IP-CIDR6,2001:67c:4e8::/48,REJECT,no-resolve
 IP-CIDR6,2001:b28:f23d::/48,REJECT,no-resolve
 IP-CIDR6,2001:b28:f23f::/48,REJECT,no-resolve
-
 # PROXY
 
 // Client
@@ -5383,6 +5382,8 @@ DOMAIN-SUFFIX,bandisoft.com,PROXY
 DOMAIN-SUFFIX,bbtoystore.com,PROXY
 DOMAIN-SUFFIX,betvictor.com,PROXY
 DOMAIN-SUFFIX,bigsound.org,PROXY
+DOMAIN-SUFFIX,bing.com,PROXY
+DOMAIN-SUFFIX,bing.net,PROXY
 DOMAIN-SUFFIX,bintray.com,PROXY
 DOMAIN-SUFFIX,bit.com,PROXY
 DOMAIN-SUFFIX,bit.do,PROXY
@@ -6163,7 +6164,6 @@ DOMAIN-SUFFIX,bdstatic.com,Domestic
 DOMAIN-SUFFIX,beatsbydre.com,Domestic
 DOMAIN-SUFFIX,bilibili.cn,Domestic
 DOMAIN-SUFFIX,bilibili.com,Domestic
-DOMAIN-SUFFIX,bing.com,Domestic
 DOMAIN-SUFFIX,caiyunapp.com,Domestic
 DOMAIN-SUFFIX,ccgslb.com,Domestic
 DOMAIN-SUFFIX,ccgslb.net,Domestic
