--- a/ClashX.yml
+++ b/ClashX.yml
@@ -13,7 +13,7 @@ Rule:
 - DOMAIN-SUFFIX,apple.com,DIRECT
 - DOMAIN-SUFFIX,icloud.com,DIRECT
 - DOMAIN-SUFFIX,icloud-content.com,DIRECT
-#- DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释。
+- DOMAIN,e.crashlytics.com,REJECT
 
 
 # 自定义规则
