--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年10月15日 01:53
+# 2018年10月17日 12:02
 
 [Rule]
 # Custom
@@ -16,7 +16,7 @@ USER-AGENT,%E5%9C%B0%E5%9B%BE*,Apple // Maps
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,Apple // Settings
 USER-AGENT,*com.apple.mobileme.fmip1,Apple
 USER-AGENT,*WeatherFoundation*,Apple
-USER-AGENT,AssistantServices*,Apple //Siri
+USER-AGENT,*AssistantServices*,Apple //Siri
 USER-AGENT,MobileAsset*,Apple
 USER-AGENT,Siri*,Apple
 
@@ -3662,8 +3662,6 @@ DOMAIN-SUFFIX,milk.yesky.com.cn,REJECT
 DOMAIN-SUFFIX,millennialmedia.com,REJECT
 DOMAIN-SUFFIX,millwardbrownacsr.com,REJECT
 DOMAIN-SUFFIX,minesage.com,REJECT
-DOMAIN-SUFFIX,minghui.com,REJECT
-DOMAIN-SUFFIX,minghui.org,REJECT
 DOMAIN-SUFFIX,mingxianshanghang.cn,REJECT
 DOMAIN-SUFFIX,mingysh.com,REJECT
 DOMAIN-SUFFIX,mini.hao123.com,REJECT
@@ -6421,6 +6419,11 @@ FINAL,Others
 ^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
 ^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
 ^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+
+// Tiktok
+(?<=aweme\/v1\/)playwm play 302
+(?<=&carrier_region=)CN(?=.*) TW 307
+(?<=&sys_region=)CN(?=.*) TW 307
 
 // Other
 ^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
