--- a/Other.conf
+++ b/Other.conf
@@ -24,6 +24,14 @@
 ^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
 ^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
 
+// Tiktok
+(?<=aweme\/v1\/)playwm play 302
+(?<=&carrier_region=)CN(?=.*) TW 307
+(?<=&sys_region=)CN(?=.*) TW 307
+(?<=&language=)en(?=.*) zh 307
+(?<=version=)\w\.\w\.\w(?=*)3.0.1 307
+(?<=version_code=)\w\.\w\.\w(?=*)3.0.1 307
+
 // Other
 ^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
 ^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
