--- a/Other.conf
+++ b/Other.conf
@@ -1,48 +1,60 @@
 [URL Rewrite]
 // Google_Service_HTTPS_Jump
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
-^https?://(www.)?google.cn/search https://www.google.com/search 307
+^https?:\/\/(www\.)?g\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn\/search https://www.google.com/search 307
 
 // Anti_ISP_JD_Hijack
-^https?://coupon.m.jd.com/ https://coupon.m.jd.com/ 302
-^https?://h5.m.jd.com/ https://h5.m.jd.com/ 302
-^https?://item.m.jd.com/ https://item.m.jd.com/ 302
-^https?://m.jd.com https://m.jd.com 302
-^https?://newcz.m.jd.com/ https://newcz.m.jd.com/ 302
-^https?://p.m.jd.com/ https://p.m.jd.com/ 302
-^https?://so.m.jd.com/ https://so.m.jd.com/ 302
-^https?://union.click.jd.com/jda? http://union.click.jd.com/jda?adblock= header
-^https?://union.click.jd.com/sem.php? http://union.click.jd.com/sem.php?adblock= header
-^https?://www.jd.com/ https://www.jd.com/ 302
+^https?:\/\/coupon\.m\.jd\.com\/ https://coupon.m.jd.com/ 302
+^https?:\/\/h5\.m\.jd\.com\/ https://h5.m.jd.com/ 302
+^https?:\/\/item\.m\.jd\.com\/ https://item.m.jd.com/ 302
+^https?:\/\/m\.jd\.com\/ https://m.jd.com/ 302
+^https?:\/\/newcz\.m\.jd\.com\/ https://newcz.m.jd.com/ 302
+^https?:\/\/p\.m\.jd\.com\/ https://p.m.jd.com/ 302
+^https?:\/\/so\.m\.jd\.com\/ https://so.m.jd.com/ 302
+^https?:\/\/union\.click\.jd\.com\/jda? http://union.click.jd.com/jda?adblock= header
+^https?:\/\/union\.click\.jd\.com\/sem.php? http://union.click.jd.com/sem.php?adblock= header
+^https?:\/\/www.jd.com\/ https://www.jd.com/ 302
 
 // Anti_ISP_Taobao_Hijack
-^https?://m.taobao.com/ https://m.taobao.com/ 302
+^https?:\/\/m\.taobao\.com\/ https://m.taobao.com/ 302
 
 // Wiki
-^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
-^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
-^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
+^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
+^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
 
 // Tiktok
 (?<=aweme\/v1\/)playwm play 302
 (?<=&carrier_region=)CN(?=.*) TW 307
 (?<=&sys_region=)CN(?=.*) TW 307
-(?<=&language=)en(?=.*) zh 307
-(?<=version=)\w\.\w\.\w(?=*)3.0.1 307
-(?<=version_code=)\w\.\w\.\w(?=*)3.0.1 307
+(?<=version=)\w\.\w\.\w(?=*) 3.0.1 307
+(?<=version_code=)\w\.\w\.\w(?=*) 3.0.1 307
 
 // Other
-^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
-^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://issuecdn.baidupcs.com/issue/netdisk/guanggao/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://m.qu.la/stylewap/js/wap.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
-^https?://m.yhd.com/1/? http://m.yhd.com/1/?adbock= 302
-^https?://n.mark.letv.com/m3u8api/ http://burpsuite.applinzi.com/Interface header
-^https?://sqimg.qq.com/ https://sqimg.qq.com/ 302
-^https?://static.m.ttkvod.com/static_cahce/index/index.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
-^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
-^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
+^https?:\/\/cfg\.m\.ttkvod\.com\/mobile\/ttk_mobile_1.8\.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
+^https?:\/\/cnzz\.com\/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
+^https?:\/\/m\.qu\.la\/stylewap\/js\/wap\.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
+^https?:\/\/m\.yhd\.com\/1\/\? http://m.yhd.com/1/?adbock= 302
+^https?:\/\/n\.mark\.letv\.com\/m3u8api\/ http://burpsuite.applinzi.com/Interface header
+^https?:\/\/sqimg\.qq\.com\/ https://sqimg.qq.com/ 302
+^https?:\/\/static\.m\.ttkvod\.com\/static_cahce\/index\/index\.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
+^https?:\/\/www\.iqshw\.com\/d\/js\/m http://burpsuite.applinzi.com/Interface header
+^https?:\/\/www\.iqshw\.com\/d\/js\/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
+
+
+
+// Anti_ISP_JavaScript_Injection
+^https?:\/\/c\.minisplat\.cn - reject
+^https?:\/\/c1\.minisplat\.cn - reject
+^https?:\/\/cache\.changjingyi\.cn - reject
+^https?:\/\/cache\.gclick\.cn - reject
+
+// Anti_ISP_Safari_Baidu_CPM_Hijack
+^https?:\/\/m\.coolaiy\.com\/b\.php - reject
+^https?:\/\/www\.babyye\.com\/b\.php - reject
+^https?:\/\/www\.gwv7\.com\/b\.php - reject
+^https?:\/\/www\.likeji\.net\/b\.php - reject
 
 // Tencent
 ^https?:\/\/imgcache\.qq\.com\/qqlive\/ - reject
@@ -182,7 +194,7 @@
 ^https?:\/\/iis1\.deliver\.ifeng\.com\/getmcode\?adid= - reject
 
 // 163
-^https?:\/\/.+\/eapi\/ad\/ - reject
+^https?:\/\/.+\/eapi\/[ad|event]\/ - reject
 ^https?:\/\/.+\.127\.net\/ad - reject
 ^https?:\/\/.+\/eapi\/(ad|log)\/ - reject
 ^https?:\/\/.+\/eapi\/ad\/ - reject
@@ -604,8 +616,11 @@
 ^https?:\/\/app\.58\.com\/api\/log\/ - reject
 
 // Duokan
-^https?:\/\/www\.duokan\.com/pictures? - REJECT
-^https?:\/\/www\.duokan\.com/promotion_day - REJECT
+^https?:\/\/www\.duokan\.com/pictures? - reject
+^https?:\/\/www\.duokan\.com/promotion_day - reject
+
+// TikTok
+^https?:\/\/api2?\.musical\.ay\/api\/ad - reject
 
 // Other
 ^https?:\/\/.+allOne\.php\?ad_name=main_splash_ios - reject
@@ -639,6 +654,7 @@
 ^https?:\/\/wmedia-track\.uc\.cn - reject
 ^https?:\/\/www\.ft\.com\/__origami\/service\/image\/v2\/images\/raw\/https%3A%2F%2Fcreatives\.ftimg\.net%2Fads* - reject
 ^https?:\/\/www\.lianbijr\.com\/adPage\/ - reject
+
 
 [Header Rewrite]
 ^*.bdimg.com header-del Referer
