--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年10月17日 12:02
+# 2018年10月22日 16:13
 
 [Rule]
 # Custom
@@ -2582,7 +2582,6 @@ DOMAIN-SUFFIX,data.ads.oppomobile.com,REJECT
 DOMAIN-SUFFIX,data.ad-score.com,REJECT
 DOMAIN-SUFFIX,data.apn.co.nz,REJECT
 DOMAIN-SUFFIX,data.bilibili.com,REJECT
-DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,data.neuroxmedia.com,REJECT
 DOMAIN-SUFFIX,datafastguru.info,REJECT
 DOMAIN-SUFFIX,datouniao.com,REJECT
@@ -2685,8 +2684,6 @@ DOMAIN-SUFFIX,dnvus.com,REJECT
 DOMAIN-SUFFIX,do69ifsly4.me,REJECT
 DOMAIN-SUFFIX,dol.deliver.ifeng.com,REJECT
 DOMAIN-SUFFIX,dolphin.deliver.ifeng.com,REJECT
-DOMAIN-SUFFIX,dongtaiwang.com,REJECT
-DOMAIN-SUFFIX,dongtaiwang.org,REJECT
 DOMAIN-SUFFIX,do-not-tracker.org,REJECT
 DOMAIN-SUFFIX,dontblockme.modaco.com,REJECT
 DOMAIN-SUFFIX,dopa.com,REJECT
@@ -3841,7 +3838,6 @@ DOMAIN-SUFFIX,omtrdc.net,REJECT
 DOMAIN-SUFFIX,on.maxspeedcdn.com,REJECT
 DOMAIN-SUFFIX,onclickads.net,REJECT
 DOMAIN-SUFFIX,one.520319.cn,REJECT
-DOMAIN-SUFFIX,oneapm.com,REJECT
 DOMAIN-SUFFIX,onesoft.im,REJECT
 DOMAIN-SUFFIX,onetad.com,REJECT
 DOMAIN-SUFFIX,onetag-sys.com,REJECT
@@ -5242,7 +5238,6 @@ PROCESS-NAME,viu,PROXY
 
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
-USER-AGENT,Argo*,Media
 USER-AGENT,AwemeI18n*,PROXY
 USER-AGENT,Coinbase*,PROXY
 USER-AGENT,Instagram*,PROXY
@@ -5386,7 +5381,6 @@ DOMAIN-SUFFIX,bit.ly,PROXY
 DOMAIN-SUFFIX,bitbucket.org,PROXY
 DOMAIN-SUFFIX,bitcointalk.org,PROXY
 DOMAIN-SUFFIX,bitshare.com,PROXY
-DOMAIN-SUFFIX,bjango.com,PROXY
 DOMAIN-SUFFIX,bkrtx.com,PROXY
 DOMAIN-SUFFIX,blizzard.com,PROXY
 DOMAIN-SUFFIX,blog.com,PROXY
@@ -5707,7 +5701,6 @@ DOMAIN-SUFFIX,sourceforge.net,PROXY
 DOMAIN-SUFFIX,sowers.org.hk,PROXY
 DOMAIN-SUFFIX,speedsmart.net,PROXY
 DOMAIN-SUFFIX,spike.com,PROXY
-DOMAIN-SUFFIX,spoti.fi,Media
 DOMAIN-SUFFIX,squarespace.com,PROXY
 DOMAIN-SUFFIX,ssa.gov,PROXY
 DOMAIN-SUFFIX,sstatic.net,PROXY
@@ -6396,44 +6389,48 @@ FINAL,Others
 
 [URL Rewrite]
 // Google_Service_HTTPS_Jump
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
-
+^https?:\/\/(www\.)?g\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn\/search https://www.google.com/search 307
 
 // Anti_ISP_JD_Hijack
-^https?://coupon.m.jd.com/ https://coupon.m.jd.com/ 302
-^https?://h5.m.jd.com/ https://h5.m.jd.com/ 302
-^https?://item.m.jd.com/ https://item.m.jd.com/ 302
-^https?://m.jd.com https://m.jd.com 302
-^https?://newcz.m.jd.com/ https://newcz.m.jd.com/ 302
-^https?://p.m.jd.com/ https://p.m.jd.com/ 302
-^https?://so.m.jd.com/ https://so.m.jd.com/ 302
-^https?://union.click.jd.com/jda? http://union.click.jd.com/jda?adblock= header
-^https?://union.click.jd.com/sem.php? http://union.click.jd.com/sem.php?adblock= header
-^https?://www.jd.com/ https://www.jd.com/ 302
+^https?:\/\/coupon\.m\.jd\.com\/ https://coupon.m.jd.com/ 302
+^https?:\/\/h5\.m\.jd\.com\/ https://h5.m.jd.com/ 302
+^https?:\/\/item\.m\.jd\.com\/ https://item.m.jd.com/ 302
+^https?:\/\/m\.jd\.com\/ https://m.jd.com/ 302
+^https?:\/\/newcz\.m\.jd\.com\/ https://newcz.m.jd.com/ 302
+^https?:\/\/p\.m\.jd\.com\/ https://p.m.jd.com/ 302
+^https?:\/\/so\.m\.jd\.com\/ https://so.m.jd.com/ 302
+^https?:\/\/union\.click\.jd\.com\/jda? http://union.click.jd.com/jda?adblock= header
+^https?:\/\/union\.click\.jd\.com\/sem.php? http://union.click.jd.com/sem.php?adblock= header
+^https?:\/\/www.jd.com\/ https://www.jd.com/ 302
 
 // Anti_ISP_Taobao_Hijack
-^https?://m.taobao.com/ https://m.taobao.com/ 302
+^https?:\/\/m\.taobao\.com\/ https://m.taobao.com/ 302
 
 // Wiki
-^https?://.+.(m.)?wikipedia.org/wiki http://www.wikiwand.com/en 302
-^https?://zh.(m.)?wikipedia.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
-^https?://zh.(m.)?wikipedia.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
+^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
+^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
 
-// Tiktok
+// TikTok
 (?<=aweme\/v1\/)playwm play 302
+(?<=region=)CN(?=.+) TW 307
+(?<=version=)3.5.0(?=.+) 2.4.1 307
+(?<=version_code=)3.5.0(?=.+) 2.4.1 307
 
 // Other
-^https?://cfg.m.ttkvod.com/mobile/ttk_mobile_1.8.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
-^https?://cnzz.com/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://issuecdn.baidupcs.com/issue/netdisk/guanggao/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
-^https?://m.qu.la/stylewap/js/wap.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
-^https?://m.yhd.com/1/? http://m.yhd.com/1/?adbock= 302
-^https?://n.mark.letv.com/m3u8api/ http://burpsuite.applinzi.com/Interface header
-^https?://sqimg.qq.com/ https://sqimg.qq.com/ 302
-^https?://static.m.ttkvod.com/static_cahce/index/index.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
-^https?://www.iqshw.com/d/js/m http://burpsuite.applinzi.com/Interface header
-^https?://www.iqshw.com/d/js/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
+^https?:\/\/cfg\.m\.ttkvod\.com\/mobile\/ttk_mobile_1.8\.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/ttk_mobile_1.8.txt header
+^https?:\/\/cnzz\.com\/ http://ogtre5vp0.bkt.clouddn.com/background.png? header
+^https?:\/\/m\.qu\.la\/stylewap\/js\/wap\.js http://ogtre5vp0.bkt.clouddn.com/qu_la_wap.js 302
+^https?:\/\/m\.yhd\.com\/1\/\? http://m.yhd.com/1/?adbock= 302
+^https?:\/\/n\.mark\.letv\.com\/m3u8api\/ http://burpsuite.applinzi.com/Interface header
+^https?:\/\/sqimg\.qq\.com\/ https://sqimg.qq.com/ 302
+^https?:\/\/static\.m\.ttkvod\.com\/static_cahce\/index\/index\.txt http://ogtre5vp0.bkt.clouddn.com/Static/TXT/index.txt header
+^https?:\/\/www\.iqshw\.com\/d\/js\/m http://burpsuite.applinzi.com/Interface header
+^https?:\/\/www\.iqshw\.com\/d\/js\/m http://rewrite.websocket.site:10/Other/Static/JS/Package.js? header
+
+
 
 
 
@@ -6648,7 +6645,7 @@ FINAL,Others
 ^https?:\/\/api\.weibo\.cn\/2\/statuses\/longtext_show_batch - reject
 ^https?:\/\/simg\.s\.weibo\.com\/.+_ios\d{2}\.gif - reject
 ^https?:\/\/storage\.wax\.weibo\.com\/\w+\.(png|jpg|mp4) - reject
-^https?:\/\/u1\.img\.mobile\.sina\.cn\/public\/files\/image\/\w{3}x\w{2,4}.+(png|jpg|mp4) - reject
+^https?:\/\/u1\.img\.mobile\.sina\.cn\/public\/files\/image\/\d{3}x\d{2,4}.+(png|jpg|mp4) - reject
 
 // Xianyu
 ^https?:\/\/gw\.alicdn\.com\/mt\/ - reject
@@ -6866,7 +6863,7 @@ FINAL,Others
 ^https?:\/\/a\.applovin\.com\/.+\/ad - reject
 
 // Weiyi
-^https?:\/\/kano\.guahao\.cn\/.+\?resize=\w{3}-\w{4} - reject
+^https?:\/\/kano\.guahao\.cn\/.+\?resize=\d{3}-\d{4} - reject
 
 // Chelaile
 ^https?:\/\/pic1\.chelaile\.net\.cn\/adv\/ - reject
@@ -6891,7 +6888,7 @@ FINAL,Others
 ^https?:\/\/api\.kkmh\.com\/v1\/advertisement\/opening\/show - reject
 
 // Hupu
-^https?:\/\/i1\.hoopchina\.com\.cn\/blogfile\/.+_\w{3}x\w{4} - reject
+^https?:\/\/i1\.hoopchina\.com\.cn\/blogfile\/.+_\d{3}x\d{4} - reject
 
 // Letv
 ^https?:\/\/.+\/letv-gug\/ - reject
@@ -6939,7 +6936,7 @@ FINAL,Others
 
 // Keep
 ^https?:\/\/api\.gotokeep\.com\/ads - reject
-^https?:\/\/static1\.keepcdn\.com\/.+\w{3}x\w{4} - reject
+^https?:\/\/static1\.keepcdn\.com\/.+\d{3}x\d{4} - reject
 
 // iSafePlay
 ^https?:\/\/aarkissltrial\.secure2\.footprint\.net\/v1\/ads - reject
@@ -7011,6 +7008,10 @@ FINAL,Others
 // Duokan
 ^https?:\/\/www\.duokan\.com/pictures? - reject
 ^https?:\/\/www\.duokan\.com/promotion_day - reject
+
+// TikTok
+^https?:\/\/api\d?\.tiktokv\.com\/api\/ad\/ - reject
+^https?:\/\/api\d?\.musical\.ly\/api\/ad\/ - reject
 
 // Other
 ^https?:\/\/.+allOne\.php\?ad_name=main_splash_ios - reject
