--- a/NewRule.conf
+++ b/NewRule.conf
@@ -11,6 +11,7 @@ RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/apple.lis
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/reject.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/media.list,Media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/proxy.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/cn_media.list,Domestic
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/domestic.list,Domestic
 RULE-SET,LAN,DIRECT
 
