--- a/NewRule.conf
+++ b/NewRule.conf
@@ -9,9 +9,9 @@ DOMAIN-SUFFIX,store.apple.com,Domestic
 RULE-SET,SYSTEM,DIRECT
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/apple.list,Apple
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/reject.list,REJECT
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/media.list,Media
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/cn_media.list,China_Media
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/media.list,Other_Media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/proxy.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/cn_media.list,Domestic
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/domestic.list,Domestic
 RULE-SET,LAN,DIRECT
 
