--- a/NewRule.conf
+++ b/NewRule.conf
@@ -10,7 +10,7 @@ RULE-SET,SYSTEM,DIRECT
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/apple.list,Apple
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/reject.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/asia_media.list,Asia_media
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/global_media.list,Global_Media
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/global_media.list,Global_media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/proxy.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/domestic.list,Domestic
 RULE-SET,LAN,DIRECT
