--- a/Rule.conf
+++ b/Rule.conf
@@ -1,4 +1,4 @@
-# 2018年10月22日 16:13
+# 2018年10月29日 22:13
 
 [Rule]
 # Custom
@@ -66,11 +66,6 @@ DOMAIN-SUFFIX,msg.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,msg2.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,policy.video.iqiyi.com,REJECT
 DOMAIN-SUFFIX,yuedu.iqiyi.com,REJECT
-IP-CIDR,101.227.200.0/24,REJECT,no-resolve
-IP-CIDR,101.227.200.11/32,REJECT,no-resolve
-IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,101.227.97.240/32,REJECT,no-resolve
-IP-CIDR,124.192.153.42/32,REJECT,no-resolve
 URL-REGEX,^https?://.+/videos/other/.+,REJECT
 
 // Hunan TV
@@ -1251,7 +1246,6 @@ DOMAIN-KEYWORD,taboola,REJECT
 DOMAIN-KEYWORD,uedas,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,umtrack,REJECT
-DOMAIN-KEYWORD,usage,REJECT
 DOMAIN-KEYWORD,wlmonitor,REJECT
 DOMAIN-KEYWORD,zjtoolbar,REJECT
 
@@ -6126,9 +6120,9 @@ DOMAIN-SUFFIX,abercrombie.com,Domestic
 DOMAIN-SUFFIX,acfun.tv,Domestic
 DOMAIN-SUFFIX,acgvideo.com,Domestic
 DOMAIN-SUFFIX,adobesc.com,Domestic
-DOMAIN-SUFFIX,airtable.com,Domestic
 DOMAIN-SUFFIX,air-matters.com,Domestic
 DOMAIN-SUFFIX,air-matters.io,Domestic
+DOMAIN-SUFFIX,airtable.com,Domestic
 DOMAIN-SUFFIX,aixifan.com,Domestic
 DOMAIN-SUFFIX,akadns.net,Domestic
 DOMAIN-SUFFIX,alicdn.com,Domestic
@@ -6136,20 +6130,20 @@ DOMAIN-SUFFIX,alipay.com,Domestic
 DOMAIN-SUFFIX,alipayobjects.com,Domestic
 DOMAIN-SUFFIX,aliyun.com,Domestic
 DOMAIN-SUFFIX,amap.com,Domestic
-DOMAIN-SUFFIX,aweme.snssdk.com,Domestic
 DOMAIN-SUFFIX,apache.org,Domestic
 DOMAIN-SUFFIX,api.crisp.chat,Domestic
 DOMAIN-SUFFIX,api.termius.com,Domestic
 DOMAIN-SUFFIX,appshike.com,Domestic
 DOMAIN-SUFFIX,appstore.com,Domestic
 DOMAIN-SUFFIX,autonavi.com,Domestic
+DOMAIN-SUFFIX,aweme.snssdk.com,Domestic
 DOMAIN-SUFFIX,bababian.com,Domestic
 DOMAIN-SUFFIX,baidu.com,Domestic
 DOMAIN-SUFFIX,battle.net,Domestic
-DOMAIN-SUFFIX,bet365.com,Domestic
 DOMAIN-SUFFIX,bdimg.com,Domestic
 DOMAIN-SUFFIX,bdstatic.com,Domestic
 DOMAIN-SUFFIX,beatsbydre.com,Domestic
+DOMAIN-SUFFIX,bet365.com,Domestic
 DOMAIN-SUFFIX,bilibili.cn,Domestic
 DOMAIN-SUFFIX,bilibili.com,Domestic
 DOMAIN-SUFFIX,caiyunapp.com,Domestic
@@ -6320,8 +6314,10 @@ DOMAIN-SUFFIX,weibo.com,Domestic
 DOMAIN-SUFFIX,weico.cc,Domestic
 DOMAIN-SUFFIX,weiphone.com,Domestic
 DOMAIN-SUFFIX,weiphone.net,Domestic
+DOMAIN-SUFFIX,wenku8.net,Domestic
 DOMAIN-SUFFIX,werewolf.53site.com,Domestic
 DOMAIN-SUFFIX,windowsupdate.com,Domestic
+DOMAIN-SUFFIX,wkcdn.com,Domestic
 DOMAIN-SUFFIX,workflowy.com,Domestic
 DOMAIN-SUFFIX,xdrig.com,Domestic
 DOMAIN-SUFFIX,xiami.com,Domestic
@@ -6349,8 +6345,8 @@ DOMAIN-SUFFIX,zealer.com,Domestic
 DOMAIN-SUFFIX,zgslb.net,Domestic
 DOMAIN-SUFFIX,zhihu.com,Domestic
 DOMAIN-SUFFIX,zhimg.com,Domestic
-DOMAIN-SUFFIX,zmz002.com,Domestic
 DOMAIN-SUFFIX,zimuzu.tv,Domestic
+DOMAIN-SUFFIX,zmz002.com,Domestic
 
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,Domestic
@@ -6391,6 +6387,7 @@ FINAL,Others
 // Google_Service_HTTPS_Jump
 ^https?:\/\/(www\.)?g\.cn https://www.google.com 302
 ^https?:\/\/(www\.)?google\.cn https://www.google.com 302
+^https?:\/\/(www\.)?google\.cn\/search https://www.google.com/search 307
 
 // Anti_ISP_JD_Hijack
 ^https?:\/\/coupon\.m\.jd\.com\/ https://coupon.m.jd.com/ 302
@@ -6615,6 +6612,7 @@ FINAL,Others
 ^https?:\/\/capi\.douyucdn\.cn\/api\/ios_app\/check_update - reject
 ^https?:\/\/capi\.douyucdn\.cn\/api\/v1\/getStartSend?client_sys=ios - reject
 ^https?:\/\/douyucdn\.cn\/.+\/appapi\/getinfo - reject
+^https?:\/\/rtbapi.douyucdn.cn\/japi\/sign\/app\/getinfo\?client_sys=ios - reject
 ^https?:\/\/staticlive\.douyucdn\.cn\/.+\/getStartSend - reject
 ^https?:\/\/staticlive\.douyucdn\.cn\/upload\/signs\/ - reject
 
@@ -6689,6 +6687,7 @@ FINAL,Others
 ^https?:\/\/stats\.tubemogul\.com\/stats\/ - reject
 ^https?:\/\/www\.youtube\.com\/api\/stats\/ads - reject
 ^https?:\/\/www\.youtube\.com\/pagead\/ - reject
+^https?:\/\/youtubei\.googleapis\.com/.+ad_break - reject
 
 // 0013
 ^https?:\/\/.+0013.+\/upload\/activity\/app_flash_screen_ - reject
