--- a/NewRule.conf
+++ b/NewRule.conf
@@ -7,12 +7,12 @@ DOMAIN-SUFFIX,store.apple.com,Domestic
 
 # Rulesets
 RULE-SET,SYSTEM,DIRECT
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/apple.list,Apple
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/reject.list,REJECT
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/china_media.list,China_media
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/global_media.list,Global_media
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/proxy.list,PROXY
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Auto_New/domestic.list,Domestic
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge%203/apple.list,Apple
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge%203/reject.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge%203/china_media.list,China_media
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge%203/global_media.list,Global_media
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge%203/proxy.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge%203/domestic.list,Domestic
 RULE-SET,LAN,DIRECT
 
 GEOIP,CN,Domestic
