--- a/Media.conf
+++ b/Media.conf
@@ -63,12 +63,6 @@ DOMAIN-SUFFIX,amazonaws.com,Media
 DOMAIN-SUFFIX,edgedatg.com,Media
 DOMAIN-SUFFIX,go.com,Media
 
-// Foxnow
-DOMAIN-SUFFIX,fox.com,Media
-DOMAIN-SUFFIX,.foxdcg.com,Media
-DOMAIN-SUFFIX,foxnow.com,Media
-DOMAIN-SUFFIX,config.fox.com,Media
-
 // MytvSUPER
 DOMAIN-KEYWORD,nowtv100,Media
 DOMAIN-KEYWORD,rthklive,Media
@@ -79,4 +73,10 @@ DOMAIN-SUFFIX,tvb.com,Media
 DOMAIN-SUFFIX,hbogoasia.hk,Media
 
 // Fox+
+USER-AGENT,FOX%20NOW*,Media
+USER-AGENT,FOXPlus*,Media
+DOMAIN-SUFFIX,config.fox.com,Media
+DOMAIN-SUFFIX,fox.com,Media
+DOMAIN-SUFFIX,foxdcg.com,Media
+DOMAIN-SUFFIX,foxnow.com,Media
 DOMAIN-SUFFIX,foxplus.com,Media
