--- a/NewRule.conf
+++ b/NewRule.conf
@@ -8,7 +8,7 @@ DOMAIN-SUFFIX,store.apple.com,Domestic
 # Rulesets
 RULE-SET,SYSTEM,DIRECT
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/apple.list,Apple
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/reject.list,AdBlock
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/reject.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/china_media.list,China_media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/global_media.list,Global_media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/proxy.list,PROXY
