--- a/Media.conf
+++ b/Media.conf
@@ -75,8 +75,14 @@ DOMAIN-SUFFIX,hbogoasia.hk,Media
 // Fox+
 USER-AGENT,FOX%20NOW*,Media
 USER-AGENT,FOXPlus*,Media
+DOMAIN-KEYWORD,foxplus,Media
 DOMAIN-SUFFIX,config.fox.com,Media
+DOMAIN-SUFFIX,emome.net,Media
 DOMAIN-SUFFIX,fox.com,Media
 DOMAIN-SUFFIX,foxdcg.com,Media
 DOMAIN-SUFFIX,foxnow.com,Media
 DOMAIN-SUFFIX,foxplus.com,Media
+DOMAIN-SUFFIX,ipinfo.io,Media
+DOMAIN-SUFFIX,mstage.io,Media
+DOMAIN-SUFFIX,now.com,Media
+DOMAIN-SUFFIX,theplatform.com,Media
