--- a/NewRule.conf
+++ b/NewRule.conf
@@ -11,7 +11,7 @@ RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/apple.list,
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/reject.list,AdBlock
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/china_media.list,China_media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/global_media.list,Global_media
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/proxy.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/proxy.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/domestic.list,Domestic
 RULE-SET,LAN,DIRECT
 
