--- a/Media.conf
+++ b/Media.conf
@@ -82,6 +82,7 @@ DOMAIN-SUFFIX,fox.com,Media
 DOMAIN-SUFFIX,foxdcg.com,Media
 DOMAIN-SUFFIX,foxnow.com,Media
 DOMAIN-SUFFIX,foxplus.com,Media
+DOMAIN-SUFFIX,foxplay.com,Media
 DOMAIN-SUFFIX,ipinfo.io,Media
 DOMAIN-SUFFIX,mstage.io,Media
 DOMAIN-SUFFIX,now.com,Media
