--- a/Media.conf
+++ b/Media.conf
@@ -1,11 +1,37 @@
 [Rule]
 
+// ABC
+DOMAIN-SUFFIX,edgedatg.com,Media
+DOMAIN-SUFFIX,go.com,Media
+
+// AbemaTV
+USER-AGENT,AbemaTV*,Media
+DOMAIN,linear-abematv.akamaized.net,Media
+DOMAIN-SUFFIX,abema.io,Media
+DOMAIN-SUFFIX,abema.tv,Media
+DOMAIN-SUFFIX,akamaized.net,Media
+DOMAIN-SUFFIX,ameba.jp,Media
+DOMAIN-SUFFIX,hayabusa.io,Media
+
+// Amazon
+DOMAIN-SUFFIX,amazonaws.com,Media
+
+// Bahamut
+USER-AGENT,Anime*,Media
+DOMAIN-SUFFIX,bahamut.com.tw,Media
+DOMAIN-SUFFIX,gamer.com.tw,Media
+DOMAIN-SUFFIX,hinet.net,Media
+
 // BBC
 USER-AGENT,BBCiPlayer*,Media
+DOMAIN-KEYWORD,bbcfmt,Media
 DOMAIN-KEYWORD,co.uk,Media
 DOMAIN-KEYWORD,uk-live,Media
 DOMAIN-SUFFIX,bbc.co,Media
+DOMAIN-SUFFIX,bbc.co.uk,Media
 DOMAIN-SUFFIX,bbc.com,Media
+DOMAIN-SUFFIX,bbci.co,Media
+DOMAIN-SUFFIX,bbci.co.uk,Media
 
 // CHOCO TV
 USER-AGENT,TwDramas*,Media
@@ -15,12 +41,50 @@ DOMAIN-SUFFIX,chocotv.com.tw,Media
 DOMAIN-KEYWORD,epicgames,Media
 DOMAIN-SUFFIX,helpshift.com,Media
 
+// Fox+
+USER-AGENT,FOX%20NOW*,Media
+USER-AGENT,FOXPlus*,Media
+DOMAIN-KEYWORD,foxplus,Media
+DOMAIN-SUFFIX,config.fox.com,Media
+DOMAIN-SUFFIX,emome.net,Media
+DOMAIN-SUFFIX,fox.com,Media
+DOMAIN-SUFFIX,foxdcg.com,Media
+DOMAIN-SUFFIX,foxnow.com,Media
+DOMAIN-SUFFIX,foxplus.com,Media
+DOMAIN-SUFFIX,foxplay.com,Media
+DOMAIN-SUFFIX,ipinfo.io,Media
+DOMAIN-SUFFIX,mstage.io,Media
+DOMAIN-SUFFIX,now.com,Media
+DOMAIN-SUFFIX,theplatform.com,Media
+
+// HBO
+USER-AGENT,HBO%20NOW*,Media
+DOMAIN-SUFFIX,hbo.com,Media
+DOMAIN-SUFFIX,hbogo.com,Media
+
+// HBO Go
+DOMAIN-SUFFIX,hbogoasia.hk,Media
+
 // Hulu
 USER-AGENT,Hulu*,Media
-DOMAIN-KEYWORD,hulu,Media
 DOMAIN-SUFFIX,happyon.jp,Media
+DOMAIN-SUFFIX,hulu.com,Media
+DOMAIN-SUFFIX,huluim.com,Media
+
+// JOOX
+USER-AGENT,WeMusic*,Media
+USER-AGENT,JOOX*,Media
+DOMAIN-SUFFIX,joox.com,Media
+
+// MytvSUPER
+USER-AGENT,mytv*,Media
+DOMAIN-KEYWORD,nowtv100,Media
+DOMAIN-KEYWORD,rthklive,Media
+DOMAIN-SUFFIX,mytvsuper.com,Media
+DOMAIN-SUFFIX,tvb.com,Media
 
 // Netflix
+USER-AGENT,Argo*,Media
 DOMAIN-SUFFIX,netflix.com,Media
 DOMAIN-SUFFIX,netflix.net,Media
 DOMAIN-SUFFIX,nflxext.com,Media
@@ -38,52 +102,11 @@ DOMAIN-KEYWORD,spotify,Media
 DOMAIN-SUFFIX,scdn.co,Media
 DOMAIN-SUFFIX,spoti.fi,Media
 
+// viuTV
+DOMAIN-SUFFIX,viu.tv,Media
+
 // Youtube
 DOMAIN-KEYWORD,youtube,Media
 DOMAIN-SUFFIX,googlevideo.com,Media
 DOMAIN-SUFFIX,gvt2.com,Media
 DOMAIN-SUFFIX,youtu.be,Media
-
-// AbemaTV
-DOMAIN-SUFFIX,abema.tv,Media
-DOMAIN-SUFFIX,akamaized.net,Media
-
-// viuTV
-DOMAIN-SUFFIX,viu.tv,Media
-
-// JOOX
-USER-AGENT,WeMusic*,Media
-USER-AGENT,JOOX*,Media
-DOMAIN-KEYWORD,joox,Media
-
-// Amazon
-DOMAIN-SUFFIX,amazonaws.com,Media
-
-// ABC
-DOMAIN-SUFFIX,edgedatg.com,Media
-DOMAIN-SUFFIX,go.com,Media
-
-// MytvSUPER
-DOMAIN-KEYWORD,nowtv100,Media
-DOMAIN-KEYWORD,rthklive,Media
-DOMAIN-SUFFIX,mytvsuper.com,Media
-DOMAIN-SUFFIX,tvb.com,Media
-
-// HBO Go
-DOMAIN-SUFFIX,hbogoasia.hk,Media
-
-// Fox+
-USER-AGENT,FOX%20NOW*,Media
-USER-AGENT,FOXPlus*,Media
-DOMAIN-KEYWORD,foxplus,Media
-DOMAIN-SUFFIX,config.fox.com,Media
-DOMAIN-SUFFIX,emome.net,Media
-DOMAIN-SUFFIX,fox.com,Media
-DOMAIN-SUFFIX,foxdcg.com,Media
-DOMAIN-SUFFIX,foxnow.com,Media
-DOMAIN-SUFFIX,foxplus.com,Media
-DOMAIN-SUFFIX,foxplay.com,Media
-DOMAIN-SUFFIX,ipinfo.io,Media
-DOMAIN-SUFFIX,mstage.io,Media
-DOMAIN-SUFFIX,now.com,Media
-DOMAIN-SUFFIX,theplatform.com,Media
