--- a/Rule.conf
+++ b/Rule.conf
@@ -9541,7 +9541,10 @@ IP-CIDR6,2001:b28:f23f::/48,AdBlock,no-resolve
 
 
 
-
+// Detect local network
+GEOIP,CN,🍂 Domestic
+// Use Proxy for all others
+FINAL,☁️ Others,dns-failed
 
 [URL Rewrite]
 // Google_Service_HTTPS_Jump
