--- a/Rule.conf
+++ b/Rule.conf
@@ -69,11 +69,11 @@ DOMAIN-SUFFIX,edu.cn,Domestic
 DOMAIN-SUFFIX,steamcontent.com,Domestic
 
 // TeamViewer
-IP-CIDR,109.239.140.0/24,no-resolve,Domestic
-IP-CIDR,139.220.243.27/32,no-resolve,Domestic
-IP-CIDR,172.16.102.56/32,no-resolve,Domestic
-IP-CIDR,185.188.32.1/28,no-resolve,Domestic
-IP-CIDR,221.226.128.146/32,no-resolve,Domestic
+IP-CIDR,109.239.140.0/24,Domestic,no-resolve
+IP-CIDR,139.220.243.27/32,Domestic,no-resolve
+IP-CIDR,172.16.102.56/32,Domestic,no-resolve
+IP-CIDR,185.188.32.1/28,Domestic,no-resolve
+IP-CIDR,221.226.128.146/32,Domestic,no-resolve
 
 
 
@@ -1019,88 +1019,88 @@ DOMAIN-SUFFIX,webmproject.org,Proxy
 DOMAIN-SUFFIX,webrtc.org,Proxy
 
 // Amazon
-IP-CIDR,13.32.0.0/16,no-resolve,Proxy
-IP-CIDR,13.33.0.0/16,no-resolve,Proxy
-IP-CIDR,13.35.0.0/17,no-resolve,Proxy
-IP-CIDR,18.184.0.0/15,no-resolve,Proxy
-IP-CIDR,18.194.0.0/15,no-resolve,Proxy
-IP-CIDR,18.208.0.0/13,no-resolve,Proxy
-IP-CIDR,18.232.0.0/14,no-resolve,Proxy
-IP-CIDR,52.200.0.0/13,no-resolve,Proxy
-IP-CIDR,52.58.0.0/15,no-resolve,Proxy
-IP-CIDR,52.74.0.0/16,no-resolve,Proxy
-IP-CIDR,52.77.0.0/16,no-resolve,Proxy
-IP-CIDR,52.84.0.0/15,no-resolve,Proxy
-IP-CIDR,54.156.0.0/14,no-resolve,Proxy
-IP-CIDR,54.226.0.0/15,no-resolve,Proxy
-IP-CIDR,54.230.156.0/22,no-resolve,Proxy
-IP-CIDR,54.93.0.0/16,no-resolve,Proxy
+IP-CIDR,13.32.0.0/16,Proxy,no-resolve
+IP-CIDR,13.33.0.0/16,Proxy,no-resolve
+IP-CIDR,13.35.0.0/17,Proxy,no-resolve
+IP-CIDR,18.184.0.0/15,Proxy,no-resolve
+IP-CIDR,18.194.0.0/15,Proxy,no-resolve
+IP-CIDR,18.208.0.0/13,Proxy,no-resolve
+IP-CIDR,18.232.0.0/14,Proxy,no-resolve
+IP-CIDR,52.200.0.0/13,Proxy,no-resolve
+IP-CIDR,52.58.0.0/15,Proxy,no-resolve
+IP-CIDR,52.74.0.0/16,Proxy,no-resolve
+IP-CIDR,52.77.0.0/16,Proxy,no-resolve
+IP-CIDR,52.84.0.0/15,Proxy,no-resolve
+IP-CIDR,54.156.0.0/14,Proxy,no-resolve
+IP-CIDR,54.226.0.0/15,Proxy,no-resolve
+IP-CIDR,54.230.156.0/22,Proxy,no-resolve
+IP-CIDR,54.93.0.0/16,Proxy,no-resolve
 
 // Facebook
-IP-CIDR,103.4.96.0/22,no-resolve,Proxy
-IP-CIDR,129.134.0.0/17,no-resolve,Proxy
-IP-CIDR,157.240.0.0/17,no-resolve,Proxy
-IP-CIDR,173.252.64.0/19,no-resolve,Proxy
-IP-CIDR,173.252.96.0/19,no-resolve,Proxy
-IP-CIDR,179.60.192.0/22,no-resolve,Proxy
-IP-CIDR,185.60.216.0/22,no-resolve,Proxy
-IP-CIDR,204.15.20.0/22,no-resolve,Proxy
-IP-CIDR,31.13.24.0/21,no-resolve,Proxy
-IP-CIDR,31.13.64.0/18,no-resolve,Proxy
-IP-CIDR,45.64.40.0/22,no-resolve,Proxy
-IP-CIDR,66.220.144.0/20,no-resolve,Proxy
-IP-CIDR,69.171.224.0/19,no-resolve,Proxy
-IP-CIDR,69.63.176.0/20,no-resolve,Proxy
-IP-CIDR,74.119.76.0/22,no-resolve,Proxy
+IP-CIDR,103.4.96.0/22,Proxy,no-resolve
+IP-CIDR,129.134.0.0/17,Proxy,no-resolve
+IP-CIDR,157.240.0.0/17,Proxy,no-resolve
+IP-CIDR,173.252.64.0/19,Proxy,no-resolve
+IP-CIDR,173.252.96.0/19,Proxy,no-resolve
+IP-CIDR,179.60.192.0/22,Proxy,no-resolve
+IP-CIDR,185.60.216.0/22,Proxy,no-resolve
+IP-CIDR,204.15.20.0/22,Proxy,no-resolve
+IP-CIDR,31.13.24.0/21,Proxy,no-resolve
+IP-CIDR,31.13.64.0/18,Proxy,no-resolve
+IP-CIDR,45.64.40.0/22,Proxy,no-resolve
+IP-CIDR,66.220.144.0/20,Proxy,no-resolve
+IP-CIDR,69.171.224.0/19,Proxy,no-resolve
+IP-CIDR,69.63.176.0/20,Proxy,no-resolve
+IP-CIDR,74.119.76.0/22,Proxy,no-resolve
 
 // Google
-IP-CIDR,173.194.0.0/16,no-resolve,Proxy
-IP-CIDR,74.125.0.0/16,no-resolve,Proxy
+IP-CIDR,173.194.0.0/16,Proxy,no-resolve
+IP-CIDR,74.125.0.0/16,Proxy,no-resolve
 
 // Kakao Talk
-IP-CIDR,1.201.0.0/24,no-resolve,Proxy
-IP-CIDR,103.246.56.0/22,no-resolve,Proxy
-IP-CIDR,103.27.148.0/22,no-resolve,Proxy
-IP-CIDR,110.76.140.0/22,no-resolve,Proxy
-IP-CIDR,113.61.104.0/22,no-resolve,Proxy
-IP-CIDR,27.0.236.0/22,no-resolve,Proxy
+IP-CIDR,1.201.0.0/24,Proxy,no-resolve
+IP-CIDR,103.246.56.0/22,Proxy,no-resolve
+IP-CIDR,103.27.148.0/22,Proxy,no-resolve
+IP-CIDR,110.76.140.0/22,Proxy,no-resolve
+IP-CIDR,113.61.104.0/22,Proxy,no-resolve
+IP-CIDR,27.0.236.0/22,Proxy,no-resolve
 
 // LINE
-IP-CIDR,103.2.28.0/22,no-resolve,Proxy
-IP-CIDR,119.235.224.0/21,no-resolve,Proxy
-IP-CIDR,119.235.232.0/23,no-resolve,Proxy
-IP-CIDR,119.235.235.0/24,no-resolve,Proxy
-IP-CIDR,119.235.236.0/23,no-resolve,Proxy
-IP-CIDR,125.6.146.0/24,no-resolve,Proxy
-IP-CIDR,125.6.149.0/24,no-resolve,Proxy
-IP-CIDR,125.6.190.0/24,no-resolve,Proxy
-IP-CIDR,125.209.208.0/20,no-resolve,Proxy
-IP-CIDR,203.104.103.0/24,no-resolve,Proxy
-IP-CIDR,203.104.128.0/20,no-resolve,Proxy
-IP-CIDR,203.174.66.64/26,no-resolve,Proxy
-IP-CIDR,203.174.77.0/24,no-resolve,Proxy
+IP-CIDR,103.2.28.0/22,Proxy,no-resolve
+IP-CIDR,119.235.224.0/21,Proxy,no-resolve
+IP-CIDR,119.235.232.0/23,Proxy,no-resolve
+IP-CIDR,119.235.235.0/24,Proxy,no-resolve
+IP-CIDR,119.235.236.0/23,Proxy,no-resolve
+IP-CIDR,125.6.146.0/24,Proxy,no-resolve
+IP-CIDR,125.6.149.0/24,Proxy,no-resolve
+IP-CIDR,125.6.190.0/24,Proxy,no-resolve
+IP-CIDR,125.209.208.0/20,Proxy,no-resolve
+IP-CIDR,203.104.103.0/24,Proxy,no-resolve
+IP-CIDR,203.104.128.0/20,Proxy,no-resolve
+IP-CIDR,203.174.66.64/26,Proxy,no-resolve
+IP-CIDR,203.174.77.0/24,Proxy,no-resolve
 
 // Potato Chat
-IP-CIDR,13.251.24.157/24,no-resolve,Proxy
-IP-CIDR,13.251.41.203/24,no-resolve,Proxy
-IP-CIDR,17.252.156.147/24,no-resolve,Proxy
-IP-CIDR,17.252.157.26/24,no-resolve,Proxy
+IP-CIDR,13.251.24.157/24,Proxy,no-resolve
+IP-CIDR,13.251.41.203/24,Proxy,no-resolve
+IP-CIDR,17.252.156.147/24,Proxy,no-resolve
+IP-CIDR,17.252.157.26/24,Proxy,no-resolve
 
 // SoftLayer
-IP-CIDR,74.86.0.0/16,no-resolve,Proxy
-IP-CIDR,75.126.0.0/16,no-resolve,Proxy
-IP-CIDR,174.37.0.0/16,no-resolve,Proxy
-IP-CIDR,208.43.0.0/16,no-resolve,Proxy
+IP-CIDR,74.86.0.0/16,Proxy,no-resolve
+IP-CIDR,75.126.0.0/16,Proxy,no-resolve
+IP-CIDR,174.37.0.0/16,Proxy,no-resolve
+IP-CIDR,208.43.0.0/16,Proxy,no-resolve
 
 // Telegram
-IP-CIDR,109.239.140.0/24,no-resolve,Proxy
-IP-CIDR,149.154.160.0/20,no-resolve,Proxy
-IP-CIDR,149.154.164.0/22,no-resolve,Proxy
-IP-CIDR,149.154.168.0/22,no-resolve,Proxy
-IP-CIDR,149.154.172.0/22,no-resolve,Proxy
-IP-CIDR,91.108.4.0/22,no-resolve,Proxy
-IP-CIDR,91.108.56.0/22,no-resolve,Proxy
-IP-CIDR,91.108.8.0/22,no-resolve,Proxy
+IP-CIDR,109.239.140.0/24,Proxy,no-resolve
+IP-CIDR,149.154.160.0/20,Proxy,no-resolve
+IP-CIDR,149.154.164.0/22,Proxy,no-resolve
+IP-CIDR,149.154.168.0/22,Proxy,no-resolve
+IP-CIDR,149.154.172.0/22,Proxy,no-resolve
+IP-CIDR,91.108.4.0/22,Proxy,no-resolve
+IP-CIDR,91.108.56.0/22,Proxy,no-resolve
+IP-CIDR,91.108.8.0/22,Proxy,no-resolve
 
 
 
