--- a/Rule.conf
+++ b/Rule.conf
@@ -8486,9 +8486,9 @@ USER-AGENT,QIYI*,China_media
 USER-AGENT,iQiYi*,China_media
 DOMAIN-KEYWORD,qiyi,China_media
 DOMAIN-SUFFIX,qy.net,China_media
-IP-CIDR,101.227.0.0/16,China_media
-IP-CIDR,101.224.0.0/13,China_media
-IP-CIDR,119.176.0.0/12,China_media
+IP-CIDR,101.227.0.0/16,China_media,no-resolve
+IP-CIDR,101.224.0.0/13,China_media,no-resolve
+IP-CIDR,119.176.0.0/12,China_media,no-resolve
 
 // letv
 DOMAIN-SUFFIX,api.mob.app.letv.com,China_media
@@ -8510,7 +8510,7 @@ DOMAIN-SUFFIX,music.163.com,China_media
 DOMAIN-SUFFIX,vv.video.qq.com,China_media
 
 // Youku
-IP-CIDR,106.11.0.0/16,China_media
+IP-CIDR,106.11.0.0/16,China_media,no-resolve
 
 
 // ABC
@@ -9440,6 +9440,7 @@ IP-CIDR,221.226.128.146/32,Domestic,no-resolve
 # Domestic
 DOMAIN-SUFFIX,cn,Domestic
 
+DOMAIN-SUFFIX,12306.cn,Domestic
 DOMAIN-SUFFIX,12306.com,Domestic
 DOMAIN-SUFFIX,126.net,Domestic
 DOMAIN-SUFFIX,163.com,Domestic
