--- a/Rule.conf
+++ b/Rule.conf
@@ -8468,9 +8468,6 @@ IP-CIDR,67.229.224.28/32,AdBlock,no-resolve
 IP-CIDR,69.28.57.245/32,AdBlock,no-resolve
 IP-CIDR,74.117.182.77/32,AdBlock,no-resolve
 IP-CIDR,78.140.131.214/32,AdBlock,no-resolve
-IP-CIDR6,2001:67c:4e8::/48,AdBlock,no-resolve
-IP-CIDR6,2001:b28:f23d::/48,AdBlock,no-resolve
-IP-CIDR6,2001:b28:f23f::/48,AdBlock,no-resolve
 
 
 // Bilibili
@@ -9390,13 +9387,15 @@ IP-CIDR,208.43.0.0/16,Proxy,no-resolve
 
 // Telegram
 IP-CIDR,109.239.140.0/24,Proxy,no-resolve
-IP-CIDR,149.154.160.0/20,Proxy,no-resolve
 IP-CIDR,149.154.164.0/22,Proxy,no-resolve
 IP-CIDR,149.154.168.0/22,Proxy,no-resolve
 IP-CIDR,149.154.172.0/22,Proxy,no-resolve
 IP-CIDR,91.108.4.0/22,Proxy,no-resolve
 IP-CIDR,91.108.56.0/22,Proxy,no-resolve
-IP-CIDR,91.108.8.0/22,Proxy,no-resolve
+IP-CIDR,91.108.56.0/23,Proxy,no-resolve
+IP-CIDR6,2001:67c:4e8::/48,Proxy,no-resolve
+IP-CIDR6,2001:b28:f23d::/48,Proxy,no-resolve
+IP-CIDR6,2001:b28:f23f::/48,Proxy,no-resolve
 
 
 // Client
@@ -9429,12 +9428,14 @@ DOMAIN-SUFFIX,edu.cn,Domestic
 DOMAIN-SUFFIX,steamcontent.com,Domestic
 
 // TeamViewer
-IP-CIDR,109.239.140.0/24,Domestic,no-resolve
-IP-CIDR,139.220.243.27/32,Domestic,no-resolve
-IP-CIDR,172.16.102.56/32,Domestic,no-resolve
-IP-CIDR,185.188.32.1/28,Domestic,no-resolve
-IP-CIDR,221.226.128.146/32,Domestic,no-resolve
-
+IP-CIDR,185.188.32.0/24,Domestic,no-resolve
+IP-CIDR,185.188.33.0/24,Domestic,no-resolve
+IP-CIDR,185.188.34.0/24,Domestic,no-resolve
+IP-CIDR,185.188.35.0/24,Domestic,no-resolve
+IP-CIDR6,2a0b:b580::/48,Domestic,no-resolve
+IP-CIDR6,2a0b:b581::/48,Domestic,no-resolve
+IP-CIDR6,2a0b:b582::/48,Domestic,no-resolve
+IP-CIDR6,2a0b:b583::/48,Domestic,no-resolve
 
 
 # Domestic
