--- a/General.conf
+++ b/General.conf
@@ -1,7 +1,7 @@
 [General]
 // Auto
 loglevel = notify
-dns-server = system, 223.5.5.5, 223.6.6.6, 8.8.8.8, 8.8.4.4
+dns-server = 223.5.5.5, 223.6.6.6, 8.8.8.8, 8.8.4.4, system
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
 
 // iOS
@@ -12,8 +12,8 @@ allow-wifi-access = true
 // macOS
 interface = 0.0.0.0
 socks-interface = 0.0.0.0
-port = 8888
-socks-port = 8889
+http-listen = 8888
+socks5-listen = 8889
 
 enhanced-mode-by-rule = false
 show-error-page-for-reject = true
