--- a/General.conf
+++ b/General.conf
@@ -1,28 +1,31 @@
 [General]
-// Auto
-loglevel = notify
-dns-server = 223.5.5.5, 223.6.6.6, 8.8.8.8, 8.8.4.4, system
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
-
-// iOS
-external-controller-access = lhie1@0.0.0.0:6170
-
-allow-wifi-access = true
-
-// macOS
+// General
 http-listen = 0.0.0.0:8888
 socks5-listen = 0.0.0.0:8889
 
-enhanced-mode-by-rule = false
+external-controller-access = lhie1@0.0.0.0:6170
+
+internet-test-url = http://www.bing.com/
+proxy-test-url = http://www.gstatic.com/generate_204
+
+test-timeout = 3
+ipv6 = true
 show-error-page-for-reject = true
 
-// Auto
+// DNS
+dns-server = 223.5.5.5, 223.6.6.6, 8.8.8.8, 8.8.4.4, system
+
+// Advanced
+loglevel = notify
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
 exclude-simple-hostnames = true
-ipv6 = true
-replica = false
+use-default-policy-if-wifi-not-primary = false
+
+// Others
+enhanced-mode-by-rule = false
 
 [Replica]
 hide-apple-request = true
 hide-crashlytics-request = true
 hide-udp = false
-use-keyword-filter = false
+keyword-filter-type = false
