--- a/Rule.conf
+++ b/Rule.conf
@@ -9154,6 +9154,8 @@ DOMAIN-SUFFIX,usma.edu,Proxy
 DOMAIN-SUFFIX,uspto.gov,Proxy
 DOMAIN-SUFFIX,ustream.tv,Proxy
 DOMAIN-SUFFIX,v.gd,Proxy
+DOMAIN-SUFFIX,v2ex.co,Proxy
+DOMAIN-SUFFIX,v2ex.com,Proxy
 DOMAIN-SUFFIX,v2ray.com,Proxy
 DOMAIN-SUFFIX,van001.com,Proxy
 DOMAIN-SUFFIX,vanpeople.com,Proxy
@@ -9623,8 +9625,6 @@ DOMAIN-SUFFIX,umengcloud.com,Domestic
 DOMAIN-SUFFIX,upaiyun.com,Domestic
 DOMAIN-SUFFIX,upyun.com,Domestic
 DOMAIN-SUFFIX,uxengine.net,Domestic
-DOMAIN-SUFFIX,v2ex.co,Domestic
-DOMAIN-SUFFIX,v2ex.com,Domestic
 DOMAIN-SUFFIX,wandoujia.com,Domestic
 DOMAIN-SUFFIX,weather.bjango.com,Domestic
 DOMAIN-SUFFIX,weather.com,Domestic
