--- a/NewRule.conf
+++ b/NewRule.conf
@@ -1,13 +1,7 @@
 [Rule]
-PROCESS-NAME,storedownloadd,Domestic // Mac App Store
-USER-AGENT,com.apple.appstored*,Domestic // iOS App Store
-DOMAIN,iosapps.itunes.apple.com,Domestic
-DOMAIN,xp.apple.com,Domestic // iOS & macOS System Upgrade
-DOMAIN-SUFFIX,store.apple.com,Domestic
 
 # Rulesets
-RULE-SET,SYSTEM,DIRECT
-RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/apple.list,Apple
+RULE-SET,SYSTEM,Apple
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/reject.list,AdBlock
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/china_media.list,China_media
 RULE-SET,https://raw.githubusercontent.com/lhie1/Rules/master/Surge3/global_media.list,Global_media
