--- a/Rule.conf
+++ b/Rule.conf
@@ -1,18 +1,8 @@
 [Rule]
-URL-REGEX,*apple.com/cn,Apple
-
-PROCESS-NAME,storedownloadd,Apple
-
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,Apple
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,Apple
 USER-AGENT,*com.apple.mobileme.fmip1,Apple
 USER-AGENT,*WeatherFoundation*,Apple
-USER-AGENT,*AssistantServices*,Apple
-USER-AGENT,MobileAsset*,Apple
-USER-AGENT,Siri*,Apple
-
-USER-AGENT,cloudd*,Apple
-USER-AGENT,com.apple.appstored*,Apple
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,Apple
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,Apple
 USER-AGENT,com.apple.geod*,Apple
 USER-AGENT,com.apple.Maps,Apple
 USER-AGENT,FindMyFriends*,Apple
@@ -23,20 +13,25 @@ USER-AGENT,fmflocatord*,Apple
 USER-AGENT,geod*,Apple
 USER-AGENT,locationd*,Apple
 USER-AGENT,Maps*,Apple
-
+DOMAIN,api.smoot.apple.com,Apple
+DOMAIN,captive.apple.com,Apple
+DOMAIN,configuration.apple.com,Apple
 DOMAIN,guzzoni.apple.com,Apple
-DOMAIN-SUFFIX,aaplimg.com,Apple
-DOMAIN-SUFFIX,apple.co,Apple
-DOMAIN-SUFFIX,apple.com,Apple
-DOMAIN-SUFFIX,apple-cloudkit.com,Apple
-DOMAIN-SUFFIX,cdn-apple.com,Apple
-DOMAIN-SUFFIX,icloud.com,Apple
-DOMAIN-SUFFIX,icloud-content.com,Apple
-DOMAIN-SUFFIX,itunes.apple.com,Apple
-DOMAIN-SUFFIX,itunes.com,Apple
-DOMAIN-SUFFIX,lookup-api.apple.com,Apple
-DOMAIN-SUFFIX,me.com,Apple
-DOMAIN-SUFFIX,mzstatic.com,Apple
+DOMAIN,smp-device-content.apple.com,Apple
+DOMAIN,xp.apple.com,Apple
+DOMAIN-SUFFIX,ess.apple.com,Apple
+DOMAIN-SUFFIX,push-apple.com.akadns.net,Apple
+DOMAIN-SUFFIX,push.apple.com,Apple
+DOMAIN,aod.itunes.apple.com,Apple
+DOMAIN,mesu.apple.com,Apple
+DOMAIN,api.smoot.apple.cn,Apple
+DOMAIN,gs-loc.apple.com,Apple
+DOMAIN,mvod.itunes.apple.com,Apple
+DOMAIN,streamingaudio.itunes.apple.com,Apple
+DOMAIN-SUFFIX,lcdn-locator.apple.com,Apple
+DOMAIN-SUFFIX,lcdn-registration.apple.com,Apple
+DOMAIN-SUFFIX,ls.apple.com,Apple
+PROCESS-NAME,trustd,Apple
 
 
 # Ads in Video apps
@@ -143,7 +138,6 @@ URL-REGEX,^https?:\/\/.+\.atm\.youku\.com,AdBlock
 
 // MGTV
 DOMAIN-SUFFIX,ads-api.videojj.com,AdBlock
-DOMAIN-SUFFIX,as.mgtv.com,AdBlock
 DOMAIN-SUFFIX,cdn.cmop.mgtv.com,AdBlock
 DOMAIN-SUFFIX,click.hunantv.com,AdBlock
 DOMAIN-SUFFIX,cmop.mgtv.com,AdBlock
@@ -8481,13 +8475,6 @@ IP-CIDR,119.176.0.0/12,China_media,no-resolve
 // letv
 DOMAIN-SUFFIX,api.mob.app.letv.com,China_media
 
-// MytvSUPER
-USER-AGENT,mytv*,China_media
-DOMAIN-KEYWORD,nowtv100,China_media
-DOMAIN-KEYWORD,rthklive,China_media
-DOMAIN-SUFFIX,mytvsuper.com,China_media
-DOMAIN-SUFFIX,tvb.com,China_media
-
 // NeteaseMusic
 USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,China_media
 USER-AGENT,NeteaseMusic*,China_media
@@ -8579,6 +8566,13 @@ DOMAIN-SUFFIX,imkan.tv,Global_media
 USER-AGENT,WeMusic*,Global_media
 USER-AGENT,JOOX*,Global_media
 DOMAIN-SUFFIX,joox.com,Global_media
+
+// MytvSUPER
+USER-AGENT,mytv*,Global_media
+DOMAIN-KEYWORD,nowtv100,Global_media
+DOMAIN-KEYWORD,rthklive,Global_media
+DOMAIN-SUFFIX,mytvsuper.com,Global_media
+DOMAIN-SUFFIX,tvb.com,Global_media
 
 // Netflix
 USER-AGENT,Argo*,Global_media
@@ -9553,6 +9547,7 @@ DOMAIN-SUFFIX,maven.org,Domestic
 DOMAIN-SUFFIX,meizu.com,Domestic
 DOMAIN-SUFFIX,mi.com,Domestic
 DOMAIN-SUFFIX,miaopai.com,Domestic
+DOMAIN-SUFFIX,microsoft.com,Domestic
 DOMAIN-SUFFIX,miui.com,Domestic
 DOMAIN-SUFFIX,miwifi.com,Domestic
 DOMAIN-SUFFIX,mob.com,Domestic
@@ -9675,6 +9670,8 @@ URL-REGEX,(Subject|HELO|SMTP),Domestic
 URL-REGEX,(api|ps|sv|offnavi|newvector|ulog\.imap|newloc)(\.map|)\.(baidu|n\.shifen)\.com,Domestic
 URL-REGEX,(.+\.|^)(360|so|qihoo|360safe|qhimg|360totalsecurity|yunpan)\.(cn|com),Domestic
 URL-REGEX,(ed2k|torrent|\.torrent|peer_id=|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|announce\.php\?passkey=|magnet:|xunlei|sandai|Thunder|XLLiveUD|bt_key),Domestic
+
+IP-CIDR,1.255.62.0/24,Domestic,no-resolve
 
 
 GEOIP,CN,Domestic
