--- a/Rule.conf
+++ b/Rule.conf
@@ -1098,6 +1098,7 @@ DOMAIN-SUFFIX,ad5.bigmir.net,AdBlock
 DOMAIN-SUFFIX,ad6.bigmir.net,AdBlock
 DOMAIN-SUFFIX,ad7.bigmir.net,AdBlock
 DOMAIN-SUFFIX,ad7.com,AdBlock
+DOMAIN-SUFFIX,ad7.on.cc,AdBlock
 DOMAIN-SUFFIX,ad7.tagphi.net,AdBlock
 DOMAIN-SUFFIX,ad8.adfarm1.adition.com,AdBlock
 DOMAIN-SUFFIX,ad9377.com,AdBlock
@@ -8774,6 +8775,7 @@ DOMAIN-SUFFIX,disconnect.me,Proxy
 DOMAIN-SUFFIX,disq.us,Proxy
 DOMAIN-SUFFIX,disqus.com,Proxy
 DOMAIN-SUFFIX,disquscdn.com,Proxy
+DOMAIN-SUFFIX,dlercloud.com,Proxy
 DOMAIN-SUFFIX,dmm.co.jp,Proxy
 DOMAIN-SUFFIX,dnsimple.com,Proxy
 DOMAIN-SUFFIX,docker.com,Proxy
